# web-monitor

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
app/: config.py  database.py  main.py  models.py  schemas.py
app/api/: dashboard.py  files.py  monitors.py  profiles.py
app/services/: browser.py  component_capture.py  monitor_runner.py  scheduler.py  selector_discovery.py
app/utils/: datetime_utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ChromeImportHint.tsx  ComponentEmbed.tsx  ComponentPreviewDialog.tsx  DashboardTab.tsx  MonitorComponentSetup.tsx  MonitorDialog.tsx  MonitorFetchFailure.tsx  MonitorProfileSessionBar.tsx  MonitorsTab.tsx  PageHeader.tsx  PagePreviewDialog.tsx  PanelMenu.tsx  ProfileDialog.tsx  ProfilesTab.tsx  (+7 more)
scripts/: _analyze-cursor-html.mjs  add_getquicker_monitor.py  dump_balance_context.py  dump_dashboard_js.py  find_bingleimuzi_component.py  find_dashboard_chunk.py  find_getquicker_intro_selector.py  fix_bingleimuzi_component.py  fix_bingleimuzi_monitor.py  fix_getquicker_monitor.py  fix_github_monitors.py  inspect_getquicker_action.py  inspect_site.py  launch-chrome-debug.ps1  setup-bingleimuzi-balance.mjs  setup-bitiful-dashboard.mjs  setup-cursor-dashboard.mjs  setup-getquicker-sharedaction.mjs  test_preview.py  verify_getquicker_component.py
server/: package.json
server/scripts/: copy-browser-assets.mjs
server/src/: config.ts  db.ts  index.ts  paths.ts  types.ts
(+41 files in other folders)
